tests/failing/object_missing_field.tails
type A = {a: int, b: int}

func tests() -> unit:
  let a: A = {a: 1}

  pass
